HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestDuplicateName/Source/Main.uv
//! Rejected source-native test attribute specimen for duplicate display names.

#test(name: "first", name: "second")
public procedure testDuplicateNameReference() -> bool
|: |= @result
{
    return true
}
